#14 Implementiran Bird View (Minimapa) sa sinhronizacijom zooma

--- a/graph_explorer/graph_explorer_package/core/templates/core/index.html
+++ b/graph_explorer/graph_explorer_package/core/templates/core/index.html
@@ -217,6 +217,7 @@
 
         <div class="bird-view">
             <h3 class="panel-title">Bird View</h3>
+            <div id="bird-view-container" style="width: 100%; height: 100%; overflow: hidden; position: relative;"></div>
         </div>
 
         <main class="main-view" id="main-container">
